CSS/style.css
*{
    padding: 0;
    margin: 0;
    font-family: monospace, sans-serif;
}
.sectionone{
    height: 75vh;
    width: 100%;
    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(../Images/background.jpg);
    background-position: center;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
}
.sectionone .centerdiv{
    height: 90%;
    width: 75%;
}
.centerdiv .header{
    height: 15%;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.sectionone img{
    margin-left: 110px;
}
.header .navbar{
    margin-right: 18%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}
.navbar a{
    text-decoration: none;
    cursor: pointer;
    color: white;
    font-weight: 600;
}
.navbar a:hover{
    color: rgb(22, 179, 231);
}
.navbar li{
    list-style: none;
    margin-left: 30px;
    font-family: monospace;
    font-size: 18px;
}
.navbar button{
    margin-left: 30px;
    background-color: rgb(22, 179, 231);
    color: white;
    border: none;
    padding: 10px 10px;
    border-radius: 5px;
    font-size: 16px;
    font-weight: 500;
    transition: 1s;
}
.navbar button:hover{
    background-color: white;
    color: rgb(22, 179, 231);
}
.centerdiv .banner{
    height: 85%;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.banner p{
    color: white;
    font-family: monospace;
    /* font-family: 'Times New Roman', Times, serif; */
    font-weight: 600;
    font-size: 35px;
    text-align: center;
}
.banner button{
    color: white;
    background-color: rgb(22, 179, 231);
    border: none;
    padding: 9px 7px;
    font-size: 17px;
    font-weight: 500;
    cursor: pointer;
    margin-top: 20px;
    border-radius: 15px;
    /* transition: 1s; */
    margin-top: 50px;
}
.banner a{
    text-decoration: none;
    color: white;
    font-weight: 800;
}
.banner button:hover{
    border: solid 2px rgb(22, 179, 231);
    color: rgb(22, 179, 231);
    background-color: transparent;
}
/* END OF SECTION THREE */

/* START OF SECTION TWO */
.sectiontwo{
    height: 80vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgba(255, 255, 255, 0.90);
}
.sectiontwo .centerdiv{
    height: 90%;
    width: 80%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.sectiontwo .centerdiv h3{
    font-size: 34px;
    margin-bottom: 25px;
    text-decoration: underline;
}
.centerdiv .center{
    margin-top: 35px;
    margin-bottom: 35px;
}
.centerdiv .last{
    margin-bottom: 70px;
}
.sectiontwo button{
    padding: 10px 7px;
    border: solid 2px rgb(22, 179, 231);
    font-weight: 600;
    border-radius: 25px;
    background-color: transparent;
    cursor: pointer;
}
/* END OF SECTION TWO */

/* START OF SECTION THREE */
.sectionthree{
    height: 80vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgba(255, 255, 255, 0.90);
}
.sectionthree .maindiv{
    height: 90%;
    width: 80%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.maindiv .albumDiv{
    height: 90%;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
.albumDiv .upperdiv{
    height: 48%;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.upperdiv .one{
    height: 100%;
    width: 32%;
    background-image: url(../Images/Baby_Photography\ \(1\).jpg);
    background-position: center;
    background-size: cover;
    border-radius: 5px;
}
.one .Baby{
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: o;
}
.one .Baby:hover{
    opacity: 0.6;
    background-color: rgb(22, 179, 231);
}
.albumDiv p{
    text-align: center;
    font-size: 35px;
    color: white;
    opacity: 0;
}
.albumDiv p:hover{
    opacity: 1;
}
.upperdiv .two{
    height: 100%;
    width: 32%;
    background-image: url(../Images/Fashion_Photography.jpg);
    background-position: center;
    background-size: cover;
    border-radius: 5px;
}
.two .Fashion{
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: o;
}
.two .Fashion:hover{
    opacity: 0.6;
    background-color: rgb(22, 179, 231);
}
.upperdiv .three{
    height: 100%;
    width: 32%;
    background-image: url(../Images/Graduation_Photography\ \(6\).jpg);
    background-position: center;
    background-size: cover;
    border-radius: 5px;
}
.three .Graduation{
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: o;
}
.three .Graduation:hover{
    opacity: 0.6;
    background-color: rgb(22, 179, 231);
}
.albumDiv .lowerdiv{
    height: 48%;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.one .Sports{
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: o;
}
.one .Sports:hover{
    opacity: 0.6;
    background-color: rgb(22, 179, 231);
}
.lowerdiv .one{
    height: 100%;
    width: 32%;
    background-image: url(../Images/Sports_Photography\ \(4\).jpg);
    background-position: center;
    background-size: cover;
    border-radius: 5px;
}
.lowerdiv .two{
    height: 100%;
    width: 32%;
    background-image: url(../Images/Wedding_Photography\ \(5\).jpg);
    background-position: center;
    background-size: cover;
    border-radius: 5px;
}
.two .Wedding{
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: o;
}
.two .Wedding:hover{
    opacity: 0.6;
    background-color: rgb(22, 179, 231);
}
.lowerdiv .three{
    height: 100%;
    width: 32%;
    background-image: url(../Images/Wildlife_Photography.jpg);
    background-position: center;
    background-size: cover;
    border-radius: 5px;
}
.three .Wildlife{
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: o;
}
.three .Wildlife:hover{
    opacity: 0.8;
    background-color: rgb(22, 179, 231);
}
.maindiv h1{
    margin-bottom: 10px;
    color: rgb(22, 179, 231);
}
/* END OF SECTION THREE */

/* START OF SECTION FOUR */
.sectionfour{
    height: 65vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgba(255, 255, 255, 0.20);
}
.sectionfour .maindiv{
    height: 90%;
    width: 80%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}
.maindiv .people{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.maindiv .photographer1{
    height: 100%;
    width: 32%;
    border-right: solid 1px rgb(22, 179, 231);
}
.maindiv .photographer2{
    height: 100%;
    width: 32%;
    border-right: solid 1px rgb(22, 179, 231);
}
.maindiv .photographer3{
    height: 100%;
    width: 32%;
}
.people a{
    text-decoration: none;
}
.people img{
    border-radius: 10px;
    border-radius: 50%;
}
.people span{
    color: rgb(22, 179, 231);
    font-style: italic;
}
.people p{
    line-height: 1.7;
}
.sectionfour .describe{
    margin-left: -40%;
}
/* End of section Four */

/* Start of section Five */
.sectionfive{
    height: 50vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: rgba(0, 0, 0, 0.10);
}
.sectionfive .centerdiv{
    height: 90%;
    width: 80%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
    /* background-color: aquamarine; */
}
.sectionfive .footer{
    height: 10%;
    width: 100%;
    background-color: rgb(71, 67, 67);
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
}
.centerdiv .form{
    height: 250px;
    width: 350px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    text-align: start;
    border: solid 1px gray;
    border-radius: 5px;
}
.label{
    margin-left: 20px;
    margin-bottom: 10px;
}
input{
    margin-left: 20px;
    margin-bottom: 7px;
    width: 85%;
    height: 30px;
    border-radius: 5px;
    border: solid 1px rgb(22, 179, 231);;
}
.button{
    margin-left: 20px;
}
.sectionfive button{
    padding: 10px 15px;
    border-radius: 15px;
    border: none;
    color: white;
    cursor: pointer;
    font-size: 15px;
    background-color: rgb(22, 179, 231);
}
input::placeholder{
    color: blue;
    font-size: small;
    padding: 10px;
}
.sectionfive button:hover{
    background-color: transparent;
    border: solid 1px rgb(22, 179, 231);
    color: rgb(22, 179, 231);
    
    font-weight: 900;
}
.centerdiv .contacts{
    height: 250px;
    width: 350px;
    display: flex;
    align-items: center;
    justify-content: center;
    border: solid 1px gray;
    border-radius: 5px;
}

.contacts p{
    line-height: 2.2;
}
.centerdiv .media{
    height: 250px;
    width: 350px;
    display: flex;
    align-items: center;
    justify-content: center;
    border: solid 1px gray;
    border-radius: 5px;
}
.media img{
    height: 33px;
    margin-left: 7px;
}
/* End of section five */
/* End of the project */

